Inline edit done

--- a/CrmPackage1/CrmPackage1/WebResources/Web Page (HTML)/index.htm
+++ b/CrmPackage1/CrmPackage1/WebResources/Web Page (HTML)/index.htm
@@ -41,9 +41,9 @@
             <h1  id="lblTitle">Title </h1>
             <input type="text" id="txtNotesName" class="transparent"  />
             <div class="file-attachment">
-                <img src="../img/attach.png" />
+               <!-- <img src="../img/attach.png" />-->
                 <input type="file" id="txtFileName" onchange="Permobil.CustomNotes.handleFileSelect(this)"  />
-                  <button class="attach-btn">Attach</button>
+                  <!--<button class="attach-btn">Attach</button>-->
                 <button class="submit-btn" onclick="Permobil.CustomNotes.Save()">Done</button>
             </div>
         </div>
