Bug fix on 24/3/2015

--- a/CrmPackage1/CrmPackage1/WebResources/Web Page (HTML)/index.htm
+++ b/CrmPackage1/CrmPackage1/WebResources/Web Page (HTML)/index.htm
@@ -35,7 +35,7 @@
 
         </div>
         <div class="file-upload">
-            <input type="text" placeholder="  Enter a note" id="txtDesc" title="Enter a note" class="transparent" />
+            <textarea rows="4" cols="50" placeholder="  Enter a note" id="txtDesc" class="transparent" ></textarea>
 
         </div>
         <div class="file-attachment" id="uploader">
