Bug fix on 31/3/2015 morning

--- a/CrmPackage1/CrmPackage1/WebResources/Web Page (HTML)/index.htm
+++ b/CrmPackage1/CrmPackage1/WebResources/Web Page (HTML)/index.htm
@@ -75,8 +75,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="DelButton EditButton"><a href="javascript:void(0)" id="btnDeleteFile" class="submit-btn" onclick="Permobil.CustomNotes.DeleteFiles()">Delete</a>&nbsp;
-                            <a href="javascript:void(0)" onclick="Permobil.CustomNotes.CloseAlert();"  class="submit-btn">Cancel<span class="ui-icon ui-icon-cancel"></span></a></td>
+                        <td class="DelButton EditButton"><a href="javascript:void(0)" id="btnDeleteFile" class="submit-btns" onclick="Permobil.CustomNotes.DeleteFiles()">Delete</a>&nbsp;
+                            <a href="javascript:void(0)" onclick="Permobil.CustomNotes.CloseAlert();"  class="submit-btns">Cancel<span class="ui-icon ui-icon-cancel"></span></a></td>
                     </tr>
                 </tbody>
             </table>
